--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,11 +3,11 @@
         "module": "commonjs",
         "noImplicitAny": true,
         "sourceMap": true,
-        "outDir": "../dist/server",
+        "outDir": "./dist",
         "target": "es6"
     },
     "files": [
         "./typings/index.d.ts",
-        "./server.ts"
+        "./src/server.ts"
     ]
 }
