--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,13 @@
   "author": "Rohit Apte",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "source-map-loader": "^0.1.5",
+    "ts-loader": "^0.8.2"
   }
 }
