--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,8 @@
         "noImplicitAny": true,
         "sourceMap": true,
         "outDir": "./dist",
-        "target": "es6"
+        "target": "es6",
+        "jsx": "react"
     },
     "files": [
         "./typings/index.d.ts",
