--- a/client/socket-client/app/src/main/AndroidManifest.xml
+++ b/client/socket-client/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".GameApplication">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -29,6 +32,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
